# numerai

./: batch_parquet.py  main.py  pyproject.toml  to_sql.py
