[tool.poetry]
name = "numerai"
version = "0.1.0"
description = ""
authors = ["ethan-stone <ethan.stone9352@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
pyarrow = "^10.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
